# etl_academico

./: README.md  pyproject.toml  requirements.txt
data/input/: ejemplo.csv
data/output/: bronze.parquet  resumen.csv  silver.parquet
src/etl_academico/: cli.py  plot.py  transform.py
src/etl_academico.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_transform.py
